tests/types_first_destructuring/types_first_destructuring.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:2

Cannot cast `a` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:5:2
   5| (a: string);
       ^

References:
   destr.js:3:24
   3| var { a, b: xb }: { a: number, b: number } = { a: 0, b: 0 };
                             ^^^^^^ [1]
   test.js:5:5
   5| (a: string);
          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:2

Cannot cast `b` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:7:2
   7| (b: string);
       ^

References:
   destr.js:3:35
   3| var { a, b: xb }: { a: number, b: number } = { a: 0, b: 0 };
                                        ^^^^^^ [1]
   test.js:7:5
   7| (b: string);
          ^^^^^^ [2]



Found 2 errors
